Update for the new Main.java.
Also removed "tomcat ant" option, ant is no longer bundled ( it was there in 3.0 because
we didn't had a separate release, if I remember corectly ).

For sandbox use, don't specify -Djava.security.manager - PolicyLoader will set one
based on user options.